# ai-finance-stats-hub

./: .gitignore  LICENSE  Makefile  README.md  app.py  fetch_data.py  main.py  pyproject.toml  requirements.txt  run_demo.py  setup.sh
.github/workflows/: ci.yml
.streamlit/: config.toml
data/processed/: prices_wide_demo.csv
demo_data/: biology_cell_viability.csv  biology_enzyme_anova.csv  chemistry_yield_anova.csv  client_style_campaign_data.csv  conversion_data.csv  feedback_data.csv  pharmacy_adverse_events.csv  revenue_data.csv  session_data.csv
docs/: AI_SUPPLY_CHAIN.md  GITHUB_ACTIONS.md
src/: __init__.py  config.py
src/bridge/: __init__.py  portfolio_inference.py
src/finance/: __init__.py  analysis.py  data_fetch.py  demo_data.py  plotting.py  supply_chain_map.py  utils.py
src/stats/: __init__.py  ab_testers.py  assumptions_checker.py  inference.py  pdf_generator.py
tests/: test_analysis.py  test_bridge.py  test_stats.py  test_supply_chain.py
