[project]
name = "ai-finance-stats-hub"
version = "0.1.0"
description = "Integrated AI supply-chain portfolio analytics and statistical inference demo"
requires-python = ">=3.12"
dependencies = [
  "streamlit>=1.44.0",
  "pandas>=2.2.0,<3.0.0",
  "numpy>=2.1.0",
  "matplotlib>=3.10.0",
  "seaborn>=0.13.0",
  "yfinance>=0.2.40",
  "scipy>=1.14.0",
  "statsmodels>=0.14.0",
  "plotly>=5.18",
  "reportlab>=4.0",
  "pillow>=10.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
